syntax = "proto3";

option csharp_namespace = "OrderManagementSystem.Grpc.OrderService";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

import "Protos/ProviderProto/provider.proto";

package order;

service OrderService{
	rpc GetOrder(GetOrderRequest)returns(OrderReply);
	rpc GetListOrders(google.protobuf.Empty)returns(ListOrderRiply);
	rpc IsStringParameterNumber(IsStringParameterRequest)returns(google.protobuf.BoolValue);
	rpc CreateOrder(CreateOrderRequest)returns(OrderReply);
	rpc UpdateOrder(UpdateOrderRequest)returns(OrderReply);
	rpc DeleteOrder(DeleteOrderRequest)returns(google.protobuf.BoolValue);
}

message GetOrderRequest{
	int32 id = 1;
}
message IsStringParameterRequest{
	int32 idOrder =1;
	string str = 2;
}

message CreateOrderRequest{
	provider.ProviderReply provider = 1;
	string number = 2;
	google.protobuf.Timestamp Date = 3;
}
message UpdateOrderRequest{
	int32 id = 1;
	provider.ProviderReply provider = 2;
	string number = 3;
	google.protobuf.Timestamp Date = 4;
}
message DeleteOrderRequest{
	int32 id = 1;
}
message OrderReply{
	int32 id = 1;
	provider.ProviderReply provider = 2;
	string number = 3;
	google.protobuf.Timestamp Date = 4;

}
message ListOrderRiply{
	repeated OrderReply orders = 1;
}
